Chat Event, handlers for event data, etc - Did thing for al3x - Added Chat Events - Added more stuff idk - I probably did other stuff aswell - My brain hurts!